--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MARI MARI</title>
+
+    <script
+      src="https://kit.fontawesome.com/d343ad545d.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -155,7 +160,7 @@
           </div>
           <div class="carousel-item">
             <img src="./img/pinturas.jpg" class="d-block w-100" alt="pinturas" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-76 text-light">
+            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
               <h5>Pinturas</h5>
             </div>
           </div>
@@ -184,7 +189,25 @@
 
     <!-- FOOTER ********************************************************* -->
     <footer>
-      <ol></ol>
+      <ol class="footer ps-0">
+        <div class="icons">
+          <span>Seguinos : </span>
+          <a href="https://www.instagram.com"
+            ><i class="fa-brands fa-instagram-square"></i
+          ></a>
+          <a href="https://www.facebook.com"
+            ><i class="fa-brands fa-facebook-square"></i
+          ></a>
+        </div>
+        <div class="info">
+          <i class="fa-solid fa-phone"></i>
+          <span> 0299 504-4599</span>
+          <a href="https://www.google.com/maps"
+            ><i class="fa fa-map-location-dot"></i
+          ></a>
+          <span>Esq. Belgrano y Godoy <br />Q8300 Neuquén Capital</span>
+        </div>
+      </ol>
     </footer>
     <!-- SCRIPT JS ****************************************************** -->
     <script
