--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- NAVBAR********************************************************** -->
+    <!-- NAVBAR************************************************************ -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Mari Mari</a>
@@ -80,116 +80,228 @@
         </div>
       </div>
     </nav>
-    <!-- CARRUSEL ******************************************************* -->
-    <div class="container w-50 pt-3">
-      <div
-        id="carouselExampleCaptions"
-        class="carousel slide"
-        data-bs-ride="false"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="4"
-            aria-label="Slide 5"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="5"
-            aria-label="Slide 6"
-          ></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./img/agrotilenos.jpg" class="d-block w-100" alt="Rollo de agrotilenos" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Agrotilenos</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/alambres.jpg" class="d-block w-100" alt="Rollos de alambres" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Alambres</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/caños.jpg" class="d-block w-100" alt="caños rojos" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Caños</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/tools.jpg" class="d-block w-100" alt="erramientas" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Herramientas</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/electricidad.jpg" class="d-block w-100" alt="cables electricos" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Electricidad</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/pinturas.jpg" class="d-block w-100" alt="pinturas" />
-            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light">
-              <h5>Pinturas</h5>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-    <!-- FIXED ********************************************************** -->
 
-    <!-- FOOTER ********************************************************* -->
+    <!-- MAIN ************************************************************* -->
+    <main>
+      <div class="fondo">
+        <!-- ESPACIADOR ***************************************************** -->
+        <div class="espaciador"></div>
+        <!-- CARRUSEL ******************************************************* -->
+        <div class="container w-50">
+          <div
+            id="carouselExampleCaptions"
+            class="carousel slide"
+            data-bs-ride="false"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="4"
+                aria-label="Slide 5"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="5"
+                aria-label="Slide 6"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./img/agrotilenos.jpg"
+                  class="d-block w-100"
+                  alt="Rollo de agrotilenos"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Agrotilenos</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/alambres.jpg"
+                  class="d-block w-100"
+                  alt="Rollos de alambres"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Alambres</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/caños.jpg"
+                  class="d-block w-100"
+                  alt="caños rojos"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Caños</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/tools.jpg"
+                  class="d-block w-100"
+                  alt="erramientas"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Herramientas</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/electricidad.jpg"
+                  class="d-block w-100"
+                  alt="cables electricos"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Electricidad</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/pinturas.jpg"
+                  class="d-block w-100"
+                  alt="pinturas"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Pinturas</h5>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <!-- H2 y TEXTO ***************************************************** -->
+        <div class="container">
+          <h2>Lorem, ipsum.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+            autem officiis. Aliquam ratione laudantium eos, iusto vitae at
+            magnam facere modi sunt odit iste. Fugit aperiam incidunt quasi
+            voluptatem consectetur exercitationem, minus accusamus maxime quos
+            impedit! Reiciendis, architecto molestias! At consectetur pariatur
+            voluptas accusamus. Repellendus quidem placeat provident esse
+            tenetur dolorum quod vel sit quia cupiditate velit neque inventore
+            culpa consequatur temporibus reiciendis eius, dolores optio? Amet
+            accusantium nesciunt dolores nulla assumenda perspiciatis iusto aut
+            asperiores corporis molestiae vitae fugiat, ipsum natus, explicabo
+            sit eos veritatis! Neque sed maxime modi itaque deleniti atque, eius
+            amet excepturi quae, ducimus accusamus possimus error! Placeat
+            perferendis velit nam, quidem quod dolore quis quaerat. Aliquid
+            excepturi saepe quis eaque? Impedit, aperiam perferendis? Illo
+            inventore, ut velit deleniti impedit minima, veniam rem animi odit
+            atque quisquam quis sapiente neque expedita doloremque autem. Quas
+            id consequatur maiores nemo dolorem autem et inventore. Neque
+            tempore maxime ut porro autem quo fugiat et exercitationem nulla?
+            Amet quam quaerat consequuntur laudantium error, molestias
+            architecto accusamus illum pariatur aliquam. Sunt ad odio aperiam
+            minima fugit quaerat amet quos minus exercitationem!
+          </p>
+        </div>
+        <!-- FIXED ********************************************************** -->
+
+        <!-- MEDIOS DE PAGO ************************************************* -->
+        <div class="rectangulo pagos mb-0">
+          <h2>Medios de pago :</h2>
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mastercard@2x.png"
+            alt=""
+          />
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
+            alt=""
+          />
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/cabal@2x.png"
+            alt=""
+          />
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/banelco@2x.png"
+            alt=""
+          />
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/tarjeta-naranja@2x.png"
+            alt=""
+          />
+          <img
+            class="tarjetas"
+            src="https://d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mercadopago@2x.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </main>
+
+    <!-- FOOTER ********************************************************** -->
     <footer>
-      <ol class="footer ps-0">
+      <ol class="footer ps-0 mb-0">
         <div class="icons">
           <span>Seguinos : </span>
           <a href="https://www.instagram.com"
@@ -209,7 +321,7 @@
         </div>
       </ol>
     </footer>
-    <!-- SCRIPT JS ****************************************************** -->
+    <!-- SCRIPT JS ******************************************************* -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
