--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MARI MARI</title>
+
+    <script
+      src="https://kit.fontawesome.com/d343ad545d.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +18,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Mari Mari</a>
         <button
@@ -28,15 +33,34 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./quienes-somos.html">Quienes Somos</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./productos.html">Productos</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Productos
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Agrotilenos</a></li>
+                <li><a class="dropdown-item" href="#">Alambres</a></li>
+                <li><a class="dropdown-item" href="#">Caños</a></li>
+                <li><a class="dropdown-item" href="#">Herramientas</a></li>
+                <li><a class="dropdown-item" href="#">Electricidad</a></li>
+                <li><a class="dropdown-item" href="#">Pinturas</a></li>
+                <li><a class="dropdown-item" href="#">Prod. Adherentes</a></li>
+                <li><a class="dropdown-item" href="#">Tornillerías</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./ofertas.html">Ofertas</a>
@@ -44,8 +68,6 @@
             <li class="nav-item">
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
-          
-           
           </ul>
           <form class="d-flex" role="search">
             <input
@@ -54,14 +76,39 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
+            <button class="btn btn-secondary" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
-
+    <main>
+      <div class="fondo text-center">
+        <div class="espaciador"></div>
+      </div>
+    </main>
+    <footer>
+      <ol class="footer mb-0">
+        <div class="footIzq">
+          <h6 class="mb-0 mt-2">SEGUINOS:</h6>
+          <div class="icons">
+            <a href="https://www.instagram.com"
+              ><i class="fa-brands fa-instagram-square"></i
+            ></a>
+            <a href="https://www.facebook.com"
+              ><i class="fa-brands fa-facebook-square"></i
+            ></a>
+          </div>
+        </div>
+        <div class="info">
+          <i class="fa-solid fa-phone"></i>
+          <span> 0299 504-4599</span>
+          <a href="https://www.google.com/maps"
+            ><i class="fa fa-map-location-dot"></i
+          ></a>
+          <span>Esq. Belgrano y Godoy <br />Q8300 Neuquén Capital</span>
+        </div>
+      </ol>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
