--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MARI MARI</title>
-
+    <!-- FONT AWESOME -->
     <script
       src="https://kit.fontawesome.com/d343ad545d.js"
       crossorigin="anonymous"
     ></script>
+    <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -53,12 +55,14 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Agrotilenos</a></li>
+                <li><a class="dropdown-item" href="#">Alambres</a></li>
+                <li><a class="dropdown-item" href="#">Caños</a></li>
+                <li><a class="dropdown-item" href="#">Herramientas</a></li>
+                <li><a class="dropdown-item" href="#">Electricidad</a></li>
+                <li><a class="dropdown-item" href="#">Pinturas</a></li>
+                <li><a class="dropdown-item" href="#">Prod. Adherentes</a></li>
+                <li><a class="dropdown-item" href="#">Tornillerías</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -83,7 +87,7 @@
 
     <!-- MAIN ************************************************************* -->
     <main>
-      <div class="fondo">
+      <div class="fondo text-center">
         <!-- ESPACIADOR ***************************************************** -->
         <div class="espaciador"></div>
         <!-- CARRUSEL ******************************************************* -->
@@ -131,6 +135,18 @@
                 data-bs-target="#carouselExampleCaptions"
                 data-bs-slide-to="5"
                 aria-label="Slide 6"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="6"
+                aria-label="Slide 7"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="7"
+                aria-label="Slide 8"
               ></button>
             </div>
             <div class="carousel-inner">
@@ -206,6 +222,30 @@
                   <h5>Pinturas</h5>
                 </div>
               </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/articulos2.jpg"
+                  class="d-block w-100"
+                  alt="pegamentos"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Productos Adherentes</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/tornillerias.jpg"
+                  class="d-block w-100"
+                  alt="tornillos varios"
+                />
+                <div
+                  class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 text-light"
+                >
+                  <h5>Tornillerías</h5>
+                </div>
+              </div>
             </div>
             <button
               class="carousel-control-prev"
@@ -236,7 +276,7 @@
         <!-- H2 y TEXTO ***************************************************** -->
         <div class="container">
           <h2>Lorem, ipsum.</h2>
-          <p>
+          <p class="texto">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
             autem officiis. Aliquam ratione laudantium eos, iusto vitae at
             magnam facere modi sunt odit iste. Fugit aperiam incidunt quasi
@@ -261,7 +301,13 @@
           </p>
         </div>
         <!-- FIXED ********************************************************** -->
-
+        <span class="fixed-icon">
+          <a class="fixed" href=""
+            >HAZ <br />
+            TU <br />
+            PEDIDO</a
+          >
+        </span>
         <!-- MEDIOS DE PAGO ************************************************* -->
         <div class="rectangulo pagos mb-0">
           <h2>Medios de pago :</h2>
@@ -301,15 +347,17 @@
 
     <!-- FOOTER ********************************************************** -->
     <footer>
-      <ol class="footer ps-0 mb-0">
-        <div class="icons">
-          <span>Seguinos : </span>
-          <a href="https://www.instagram.com"
-            ><i class="fa-brands fa-instagram-square"></i
-          ></a>
-          <a href="https://www.facebook.com"
-            ><i class="fa-brands fa-facebook-square"></i
-          ></a>
+      <ol class="footer mb-0">
+        <div class="footIzq">
+          <h6 class="mb-0 mt-2">SEGUINOS:</h6>
+          <div class="icons">
+            <a href="https://www.instagram.com"
+              ><i class="fa-brands fa-instagram-square"></i
+            ></a>
+            <a href="https://www.facebook.com"
+              ><i class="fa-brands fa-facebook-square"></i
+            ></a>
+          </div>
         </div>
         <div class="info">
           <i class="fa-solid fa-phone"></i>
