--- a/productos.html
+++ b/productos.html
@@ -18,9 +18,10 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Mari Mari</a>
+        <a class="navbar-brand titulo" href="./index.html">Mari Mari</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +44,7 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="./productos.html"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -52,14 +53,14 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Agrotilenos</a></li>
-                <li><a class="dropdown-item" href="#">Alambres</a></li>
-                <li><a class="dropdown-item" href="#">Caños</a></li>
-                <li><a class="dropdown-item" href="#">Herramientas</a></li>
-                <li><a class="dropdown-item" href="#">Electricidad</a></li>
-                <li><a class="dropdown-item" href="#">Pinturas</a></li>
-                <li><a class="dropdown-item" href="#">Prod. Adherentes</a></li>
-                <li><a class="dropdown-item" href="#">Tornillerías</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Agrotilenos</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Alambres</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Caños</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Herramientas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Electricidad</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Pinturas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Prod. Adherentes</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Tornillerías</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -81,11 +82,26 @@
         </div>
       </div>
     </nav>
+    <!-- MAIN -->
     <main>
       <div class="fondo text-center">
+        <!-- ESPACIADOR -->
         <div class="espaciador"></div>
       </div>      
+      <!-- LISTA -->
+      <div class="fondo">
+        <br><br>
+        <ul class="fondo mb-0 text-center lista-productos">
+          <li class="product">GAS</li>
+          <li class="product">AGUA</li>
+          <li class="product">ELECTRICIDAD</li>
+          <li class="product">CONSTRUCCION</li>
+          <li class="product">CONSTRUCCION EN SECO</li>
+          <li class="product">HERRAMIENTAS</li>
+        </ul>
+      </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <ol class="footer mb-0">
         <div class="footIzq">
