--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -18,9 +18,10 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Mari Mari</a>
+        <a class="navbar-brand titulo" href="./index.html">Mari Mari</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +44,7 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="./productos.html"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -52,14 +53,14 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Agrotilenos</a></li>
-                <li><a class="dropdown-item" href="#">Alambres</a></li>
-                <li><a class="dropdown-item" href="#">Caños</a></li>
-                <li><a class="dropdown-item" href="#">Herramientas</a></li>
-                <li><a class="dropdown-item" href="#">Electricidad</a></li>
-                <li><a class="dropdown-item" href="#">Pinturas</a></li>
-                <li><a class="dropdown-item" href="#">Prod. Adherentes</a></li>
-                <li><a class="dropdown-item" href="#">Tornillerías</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Agrotilenos</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Alambres</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Caños</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Herramientas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Electricidad</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Pinturas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Prod. Adherentes</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Tornillerías</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -81,9 +82,72 @@
         </div>
       </div>
     </nav>
-    <main>
-      <div class="fondo text-center">
+    <!-- MAIN -->
+    <main class="fondo">
+      <div class="text-center">
+        <!-- ESPACIADOR -->
         <div class="espaciador"></div>
+      </div>
+      <!-- QUIENES SOMOS -->
+      <div class="container fondo text-center">
+        <h2>Quienes somos</h2>
+        <p class="texto mb-0">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
+          recusandae quisquam omnis eaque neque at atque eos ipsum deserunt nemo
+          perferendis unde quas dolor et dolore pariatur, a eius accusantium
+          suscipit? Ratione numquam molestiae sed fugiat tempora vero quibusdam
+          repellat, exercitationem ad placeat laborum magni in magnam veritatis
+          dolores dicta est libero veniam. Consectetur eum sed amet ratione
+          velit? Omnis eum dolores recusandae quaerat est sit tenetur vero atque
+          non harum suscipit amet quia rerum vitae, id numquam facere magni, ab
+          dolorem debitis repellat quam totam. Ducimus laborum accusantium esse
+          enim saepe laboriosam rerum consequatur. Ipsum blanditiis optio
+          mollitia magnam eius fugit, repellat error nemo deleniti inventore.
+          Ipsum a aliquid, temporibus, sit accusamus non consectetur error
+          aliquam dolore blanditiis recusandae? In porro, id saepe amet
+          repudiandae debitis pariatur et vitae voluptatum officiis veniam
+          delectus natus tempora doloremque tenetur possimus eveniet nostrum,
+          dicta necessitatibus quam quaerat voluptas iusto nulla! Praesentium
+          ullam excepturi, reprehenderit officiis animi aspernatur, porro
+          voluptates voluptas dignissimos distinctio nostrum a tenetur eveniet
+          blanditiis! Laudantium dignissimos placeat dicta, repudiandae beatae
+          molestias modi velit unde illum quos possimus fugiat assumenda illo
+          impedit nihil. Eligendi sit aspernatur nihil eius quo rem, voluptatem,
+          facere porro minima molestias error! Expedita incidunt ducimus aliquid
+          ea pariatur libero veniam sed cumque aut numquam voluptates possimus,
+          exercitationem vero? Tempore minima repellendus eaque maxime sequi
+          ducimus corporis quod quaerat exercitationem esse, voluptate error
+          incidunt asperiores natus cupiditate fugiat consectetur suscipit fuga
+          nihil! Eos amet dignissimos dolore minima aspernatur sed at cum. Aut,
+          rem rerum? Corrupti reprehenderit nisi perspiciatis aliquid facere
+          natus fugiat labore magnam, sapiente at deleniti dolore dignissimos
+          hic facilis nemo tenetur similique ipsa. Voluptates alias accusantium
+          repellendus? Reprehenderit culpa sapiente ullam rem at eligendi,
+          fugiat atque, dolor quia, fugit blanditiis enim! Dignissimos totam
+          quae nihil! Dolores ut et optio quo qui! Eos repudiandae optio
+          reiciendis, ex aliquid corporis vel nihil voluptatem inventore dicta
+          tempora dolore harum officia ea laboriosam, eveniet odio temporibus
+          saepe! In ipsa quisquam quis nihil sequi quasi accusantium quo, id
+          iure tempore molestiae aliquid possimus mollitia maxime enim corrupti,
+          nemo eligendi. Tempore ex non fugit nesciunt voluptatibus odio
+          delectus cupiditate in doloribus! Nobis ipsa nemo, et illo
+          necessitatibus temporibus velit laboriosam voluptas, ad dolores
+          ratione optio dolor eaque rem aliquid aut fugit nulla! Fuga aspernatur
+          aperiam sed quis ducimus quidem magnam expedita vitae tempore rem?
+          Quasi ut aspernatur illo, labore magni molestias nostrum harum, itaque
+          commodi sit illum architecto unde, vero sint minima impedit deserunt?
+          Vel nesciunt maiores laudantium modi fuga provident, esse illum
+          similique sit vitae optio minus porro doloribus cum temporibus ratione
+          officia iste facere. Voluptatum error eveniet, ullam placeat, porro
+          rem voluptas, beatae magnam suscipit qui praesentium eos modi quisquam
+          enim quia dolore delectus nobis! Odit autem iure obcaecati quo
+          repellat et totam minus! Dolor quo voluptatibus, veritatis voluptatem
+          nihil natus odit perferendis quaerat magnam alias tempora,
+          consequuntur incidunt praesentium dolorum molestiae? Deleniti facere
+          quis ipsum, iusto ea repellat. Et dolor iste excepturi numquam
+          expedita dignissimos ducimus rem voluptates necessitatibus ut nobis
+          recusandae voluptatem nesciunt debitis consequatur, obcaecati magni?
+        </p>
       </div>
     </main>
     <footer>
