--- a/ofertas.html
+++ b/ofertas.html
@@ -18,9 +18,10 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Mari Mari</a>
+        <a class="navbar-brand titulo" href="./index.html">Mari Mari</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +44,7 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="./productos.html"
                 id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -52,14 +53,14 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Agrotilenos</a></li>
-                <li><a class="dropdown-item" href="#">Alambres</a></li>
-                <li><a class="dropdown-item" href="#">Caños</a></li>
-                <li><a class="dropdown-item" href="#">Herramientas</a></li>
-                <li><a class="dropdown-item" href="#">Electricidad</a></li>
-                <li><a class="dropdown-item" href="#">Pinturas</a></li>
-                <li><a class="dropdown-item" href="#">Prod. Adherentes</a></li>
-                <li><a class="dropdown-item" href="#">Tornillerías</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Agrotilenos</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Alambres</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Caños</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Herramientas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Electricidad</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Pinturas</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Prod. Adherentes</a></li>
+                <li><a class="dropdown-item" href="./productos.html">Tornillerías</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -81,9 +82,74 @@
         </div>
       </div>
     </nav>
+    <!-- MAIN -->
     <main>
-      <div class="fondo text-center">
-        <div class="espaciador"></div>
+      <div class="fondo">
+        <div class="fondo text-center">
+          <!-- ESPACIADOR -->
+          <div class="espaciador"></div>
+        </div>
+        <!-- TABLAS -->
+        <div class="container ofertas">
+          <table class="table table-striped no-fondo">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Precio</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Hormigonera 120 lts</td>
+                <td>$ 40.000,00</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Termofusora Acqua System</td>
+                <td>$ 27.000,00</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>
+                  Desmalezadora Motoguadaña Cortadora Cesped 52cc Lusqtoff
+                </td>
+                <td>$ 15.560,00</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Producto 4</td>
+                <td>$ 15.000,20</td>  
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Producto 5</td>
+                <td>$ 25.000,00</td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>Producto 6</td>
+                <td>$ 400,00</td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>Producto 7</td>
+                <td>$ 35.000,00</td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>Producto 8</td>
+                <td>$ 15.000,00</td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td>Producto 9</td>
+                <td>19.990,00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </main>
     <footer>
